@@ -727,7 +727,7 @@
 			 */
 			uint8_t Endpoint_Discard_Stream(uint16_t Length
 			#if !defined(NO_STREAM_CALLBACKS) || defined(__DOXYGEN__)
-			                                , uint8_t (* const Callback)(void)
+			                                , StreamCallbackPtr_t Callback
 			#endif
 			                                );
 
@@ -754,7 +754,7 @@
 			 */
 			uint8_t Endpoint_Write_Stream_LE(const void* Buffer, uint16_t Length
 			#if !defined(NO_STREAM_CALLBACKS) || defined(__DOXYGEN__)
-			                                 , uint8_t (* const Callback)(void)
+			                                 , StreamCallbackPtr_t Callback
 			#endif
 			                                 ) ATTR_NON_NULL_PTR_ARG(1);
 
@@ -781,7 +781,7 @@
 			 */
 			uint8_t Endpoint_Write_Stream_BE(const void* Buffer, uint16_t Length
 			#if !defined(NO_STREAM_CALLBACKS) || defined(__DOXYGEN__)
-			                                 , uint8_t (* const Callback)(void)
+			                                 , StreamCallbackPtr_t Callback
 			#endif
 			                                 ) ATTR_NON_NULL_PTR_ARG(1);
 
@@ -808,7 +808,7 @@
 			 */
 			uint8_t Endpoint_Read_Stream_LE(void* Buffer, uint16_t Length
 			#if !defined(NO_STREAM_CALLBACKS) || defined(__DOXYGEN__)
-			                                , uint8_t (* const Callback)(void)
+			                                , StreamCallbackPtr_t Callback
 			#endif
 			                                ) ATTR_NON_NULL_PTR_ARG(1);
 
@@ -835,7 +835,7 @@
 			 */
 			uint8_t Endpoint_Read_Stream_BE(void* Buffer, uint16_t Length
 			#if !defined(NO_STREAM_CALLBACKS) || defined(__DOXYGEN__)
-			                                , uint8_t (* const Callback)(void)
+			                                , StreamCallbackPtr_t Callback
 			#endif
 			                                ) ATTR_NON_NULL_PTR_ARG(1);
 
